doc: add doc for nestjs deployment on vercel

--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root@localhost:3306/nest_crud"
+# DATABASE_URL="mysql://root@localhost:3306/nest_crud"
+DATABASE_URL=postgres://amm834:fT8wKmvAkg1U@ep-soft-credit-377725-pooler.ap-southeast-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=10
+DIRECT_URL=postgres://amm834:fT8wKmvAkg1U@ep-soft-credit-377725.ap-southeast-1.aws.neon.tech/neondb?connect_timeout=10
+
 JWT_SECRET="jwtsecret123"
